--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,4 +1,11 @@
 
+* {
+    border: 1px solid black;
+}
+
+body {
+    background-color: #faf1e3;
+}
 
 a {
     cursor: pointer;
@@ -21,11 +28,16 @@ p {
     letter-spacing: 15px;
 }
 
-#experiences-section-title {
+header h2 {
+    display: none;
+    font-size: 30px;
     font-family: "Bebas Neue", sans-serif;
     font-weight: normal;
-    font-size: 70px;
-    letter-spacing: 15px;
+    letter-spacing: 5px;
+}
+
+#openNav {
+    display: none;
 }
 
 nav {
@@ -35,7 +47,7 @@ nav {
     font-size: 20px;
     position: fixed;
     z-index: 1;
-    top: 0px;
+    top: 0;
     padding: 10px;
     margin-top: 50px;
     margin-left: 10px;
@@ -62,7 +74,7 @@ nav a:hover {
     grid-template: 1fr / repeat(2, 1fr);
     grid-auto-flow: column;
     justify-content: center;
-    gap: 80px;
+    gap: 75px;
     margin: 50px auto 0;
 }
 
@@ -71,10 +83,15 @@ nav a:hover {
     width: 450px;
 }
 
+#main-story {
+    height: 680px;
+}
+
 #main-story p {
     font-weight: normal;
     line-height: 3;
     letter-spacing: 1.7px;
+    text-align: justify;
 }
 
 #main-story h1 {
@@ -83,7 +100,41 @@ nav a:hover {
     font-size: 70px;
 }
 
+.grid-layout-2 {
+    display: grid;
+    height: 800px;
+    width: 980px;
+    grid-template: 1fr / repeat(2, 1fr);
+    grid-auto-flow: column;
+    justify-content: center;
+    gap: 75px;
+    margin: 50px auto 0;
+}
+
+#experiences-section-title {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: normal;
+    font-size: 70px;
+    letter-spacing: 15px;
+}
+
+#sunsphere-image {
+    height: 533px;
+    width: 400px;
+}
+
+#experience-paragraph {
+    font-weight: normal;
+    line-height: 3;
+    letter-spacing: 1.7px;
+    margin-top: auto;
+    text-align: justify;
+    width: 500px;
+    height: 533px;
+}
+
 hr {
+    margin-top: 100px;
     width: 980px;
 }
 
@@ -97,17 +148,97 @@ footer {
 
 footer a {
     text-decoration: none;
-    color: #2564f7;
+    color: #1a46ad;
     transition: color 200ms ease-out;
     -webkit-transition: color 200ms ease-out;
 }
 
 footer a:hover {
-    color: #93b2fa;
+    color: #7a9ff5;
 }
 
 @media only screen and (max-width: 1230px) {
-    nav {
-        opacity: 0;
+    header {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+        width: 100%;
+        height: 55px;
+        position: sticky;
+
+        background-color: #faf1e3;
     }
+    nav {
+        display: none;
+        font-size: 15px;
+    }
+    #openNav {
+        display: block;
+        height: 25px;
+        width: 25px;
+        margin-right: 25px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    #openNav {
+        margin-top: 0;
+    }
+    #name {
+        display: none;
+    }
+    header {
+        justify-content: space-between;
+    }
+    header h2 {
+        display: block;
+        margin-left: 25px;
+    }
+    .grid-layout {
+        grid-template: repeat(2, 1fr) / 1fr;
+        grid-auto-flow: row;
+        height: 1000px;
+        width: 450px;
+        justify-content: center;
+        margin: 0 auto 0;
+        padding: 0;
+        gap: 0;
+    }
+    #experiences-section-title {
+        font-size: 50px;
+        width: 450px;
+        margin-top: 100px;
+    }
+    #sunsphere-image {
+        /*width: 400px;*/
+        display: none;
+    }
+    #experience-paragraph {
+        width: 450px;
+        margin-top: 0;
+    }
+    .grid-layout-2 {
+        height: 750px;
+        width: 450px;
+        justify-content: center;
+        grid-template: 1fr / 3fr;
+        grid-auto-flow: row;
+        margin: 0 auto 0;
+        padding: 0;
+        gap: 0;
+    }
+    hr {
+        margin-top: 25px;
+        width: 450px;
+    }
+    footer {
+        width: 450px;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
 }
