--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,8 +1,11 @@
-
+/*
 * {
     border: 1px solid black;
 }
 
+Background color change for header: #CC3724
+Background color for drop down menu: #e26b5d
+*/
 body {
     background-color: #faf1e3;
 }
@@ -21,11 +24,16 @@ p {
     font-weight: normal;
 }
 
-#name {
+#name, #projects-page-title {
     font-family: "Bebas Neue", sans-serif;
     font-weight: normal;
     font-size: 70px;
     letter-spacing: 15px;
+}
+
+#projects-page-title {
+    width: 980px;
+    margin: 55px auto 0;
 }
 
 header h2 {
@@ -40,6 +48,9 @@ header h2 {
     display: none;
 }
 
+#navOverlay {
+    display: none;
+}
 nav {
     display: grid;
     grid-template-columns: 100px;
@@ -81,6 +92,7 @@ nav a:hover {
 #profile {
     height: 600px;
     width: 450px;
+    box-shadow: 10px 10px #5e4011;
 }
 
 #main-story {
@@ -92,6 +104,7 @@ nav a:hover {
     line-height: 3;
     letter-spacing: 1.7px;
     text-align: justify;
+    font-size: 16px;
 }
 
 #main-story h1 {
@@ -111,6 +124,16 @@ nav a:hover {
     margin: 50px auto 0;
 }
 
+.projects-grid-layout {
+    display: grid;
+    height: 311px;
+    width: 980px;
+    grid-template: 1fr / repeat(2, 1fr);
+    justify-content: center;
+    gap: 75px;
+    margin: auto;
+}
+
 #experiences-section-title {
     font-family: "Bebas Neue", sans-serif;
     font-weight: normal;
@@ -121,6 +144,7 @@ nav a:hover {
 #sunsphere-image {
     height: 533px;
     width: 400px;
+    box-shadow: 10px 10px #5e4011;
 }
 
 #experience-paragraph {
@@ -131,6 +155,7 @@ nav a:hover {
     text-align: justify;
     width: 500px;
     height: 533px;
+    font-size: 16px;
 }
 
 hr {
@@ -157,6 +182,10 @@ footer a:hover {
     color: #7a9ff5;
 }
 
+#email-icon, #linkedin-icon {
+    display: none;
+}
+
 @media only screen and (max-width: 1230px) {
     header {
         display: flex;
@@ -165,13 +194,22 @@ footer a:hover {
         align-items: center;
         width: 100%;
         height: 55px;
-        position: sticky;
-
+        position: fixed;
+        top: 0;
+        left: 0;
+        border-color: #faf1e3;
         background-color: #faf1e3;
     }
     nav {
         display: none;
         font-size: 15px;
+    }
+    #otherNav {
+        margin-left: 25px;
+        width: 200px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
     #openNav {
         display: block;
@@ -179,13 +217,44 @@ footer a:hover {
         width: 25px;
         margin-right: 25px;
     }
+    #closeNav {
+        display: block;
+        height: 25px;
+        width: 25px;
+        margin-right: 25px;
+    }
+    #navOverlay {
+        background-color: #0E2851;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 55px;
+        width: 100%;
+
+    }
+    #navOverlay {
+
+    }
+    #navOverlay a {
+        color: white;
+        text-decoration: none;
+        font-family: "Outfit", serif;
+        font-weight: 250;
+    }
+    main {
+        margin-top: 55px;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
     #openNav {
         margin-top: 0;
     }
-    #name {
+    #name, #projects-page-title {
         display: none;
     }
     header {
@@ -205,13 +274,15 @@ footer a:hover {
         padding: 0;
         gap: 0;
     }
+    #main-story {
+        height: 600px;
+    }
     #experiences-section-title {
         font-size: 50px;
         width: 450px;
         margin-top: 100px;
     }
     #sunsphere-image {
-        /*width: 400px;*/
         display: none;
     }
     #experience-paragraph {
@@ -239,6 +310,63 @@ footer a:hover {
     }
 }
 
-@media only screen and (max-width: 600px) {
-
+@media only screen and (max-width: 550px) {
+    h1 {
+        text-align: center;
+    }
+    header h2 {
+        font-size: 18px;
+    }
+    #openNav img, #openNav, #closeNav, #closeNav img {
+        height: 18px;
+        width: 18px;
+    }
+    #otherNav a {
+        font-size: 13px;
+    }
+    #profile, #main-story, .grid-layout, .grid-layout-2, #experience-paragraph, #experiences-section-title, hr, footer {
+        width: 241px;
+    }
+    #profile {
+        height: 321px;
+    }
+    #main-story {
+        height: 300px;
+    }
+    #main-story p {
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 1.7px;
+    }
+    #experience-paragraph {
+        font-size: 12px;
+        line-height: 2;
+        letter-spacing: 1px;
+        height: 360px;
+    }
+    #experiences-section-title {
+        font-size: 27px;
+        letter-spacing: 7px;
+        margin: 0;
+    }
+    .grid-layout {
+        height: 720px
+    }
+    .grid-layout-2 {
+        height: 440px;
+    }
+    .grid-layout-2 div {
+        height: 60px
+    }
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    footer p {
+        display: none;
+    }
+    #linkedin-icon, #email-icon {
+        display: block;
+    }
 }
