--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -64,7 +64,13 @@ nav {
     margin-left: 10px;
 }
 
+nav a img, #otherNav a img {
+    width: 20px;
+    height: 20px;
+}
+
 nav a {
+    width: 100px;
     text-decoration: none;
     font-size: 20px;
     color: black;
@@ -92,7 +98,7 @@ nav a:hover {
 #profile {
     height: 600px;
     width: 450px;
-    box-shadow: 10px 10px #5e4011;
+    box-shadow: 15px 15px #5e4011;
 }
 
 #main-story {
@@ -130,8 +136,36 @@ nav a:hover {
     width: 980px;
     grid-template: 1fr / repeat(2, 1fr);
     justify-content: center;
-    gap: 75px;
+    gap: 88px;
     margin: auto;
+}
+
+#projects-page-title {
+    padding-bottom: 10px;
+}
+
+#portfolio-image-overlay, #portfolio-project-link, #portfolio-project-link img {
+    height: 311px;
+    width: 446px;
+}
+
+#portfolio-image-overlay {
+    position: absolute;
+    background-color: black;
+    opacity: 0;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.25s ease-in;
+}
+
+#portfolio-image-overlay:hover {
+    opacity: 70%;
+}
+
+#portfolio-project-link img {
+    background-size: cover;
 }
 
 #experiences-section-title {
@@ -144,7 +178,7 @@ nav a:hover {
 #sunsphere-image {
     height: 533px;
     width: 400px;
-    box-shadow: 10px 10px #5e4011;
+    box-shadow: 15px 15px #5e4011;
 }
 
 #experience-paragraph {
@@ -199,6 +233,7 @@ footer a:hover {
         left: 0;
         border-color: #faf1e3;
         background-color: #faf1e3;
+        z-index: 5;
     }
     nav {
         display: none;
@@ -270,7 +305,7 @@ footer a:hover {
         height: 1000px;
         width: 450px;
         justify-content: center;
-        margin: 0 auto 0;
+        margin: auto;
         padding: 0;
         gap: 0;
     }
@@ -298,6 +333,16 @@ footer a:hover {
         margin: 0 auto 0;
         padding: 0;
         gap: 0;
+    }
+    #portfolio-image-overlay {
+        opacity: 70%;
+    }
+    .projects-grid-layout {
+        justify-content: center;
+        grid-template: repeat(2, 1fr) / 1fr;
+        grid-auto-flow: row;
+        height: 710px;
+        width: 446px;
     }
     hr {
         margin-top: 25px;
@@ -357,6 +402,16 @@ footer a:hover {
     }
     .grid-layout-2 div {
         height: 60px
+    }
+    #portfolio-project-link, #portfolio-image-overlay, #portfolio-project-link img {
+        font-size: 12px;
+        width: 241px;
+        height: 170px;
+    }
+    .projects-grid-layout {
+        height: 390px;
+        width: 241px;
+        gap: 50px;
     }
     footer {
         display: flex;
