--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -2,7 +2,7 @@
 * {
     border: 1px solid black;
 }
-
+/*
 Background color change for header: #CC3724
 Background color for drop down menu: #e26b5d
 */
@@ -24,11 +24,36 @@ p {
     font-weight: normal;
 }
 
-#name, #projects-page-title {
+#name, #projects-page-title, .project-detail-title {
     font-family: "Bebas Neue", sans-serif;
     font-weight: normal;
     font-size: 70px;
     letter-spacing: 15px;
+}
+
+main .space-between-titles {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: normal;
+    font-size: 20px;
+    letter-spacing: 15px;
+    width: 980px;
+    margin: 45px auto 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+#website-designs-title, #development-title {
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: normal;
+    font-size: 30px;
+    letter-spacing: 15px;
+    width: 980px;
+    margin: 45px auto 0;
+}
+
+.project-detail-title {
+    width: 980px;
+    margin: 55px auto 0;
 }
 
 #projects-page-title {
@@ -51,6 +76,7 @@ header h2 {
 #navOverlay {
     display: none;
 }
+
 nav {
     display: grid;
     grid-template-columns: 100px;
@@ -62,11 +88,6 @@ nav {
     padding: 10px;
     margin-top: 50px;
     margin-left: 10px;
-}
-
-nav a img, #otherNav a img {
-    width: 20px;
-    height: 20px;
 }
 
 nav a {
@@ -140,7 +161,7 @@ nav a:hover {
     margin: auto;
 }
 
-#projects-page-title {
+#projects-page-title, .project-detail-title {
     padding-bottom: 10px;
 }
 
@@ -158,6 +179,7 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     transition: opacity 0.25s ease-in;
+    -webkit-transition: opacity 0.25s ease-in;
 }
 
 #portfolio-image-overlay:hover {
@@ -175,9 +197,123 @@ nav a:hover {
     letter-spacing: 15px;
 }
 
-#sunsphere-image {
+#sunsphere-image, #code-snippet, #code-snippet-2, #code-snippet-3 {
     height: 533px;
     width: 400px;
+    box-shadow: 15px 15px #5e4011;
+}
+
+#paragraph-section-grid-layout {
+    height: 594px;
+    width: 980px;
+    display: grid;
+    grid-template: 1fr / repeat(2, 1fr);
+    gap: 40px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+#paragraph-section-grid-layout p {
+    height: 564px;
+    width: 470px;
+    font-family: "Outfit", serif;
+    font-weight: normal;
+    line-height: 3;
+    letter-spacing: 1.7px;
+    text-align: justify;
+    font-size: 16px;
+}
+
+#shorter-paragraph-section-grid-layout {
+    height: 320px;
+    width: 980px;
+    display: grid;
+    grid-template: 1fr / repeat(2, 1fr);
+    gap: 40px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+}
+
+#shorter-paragraph-section-grid-layout p {
+    height: 300px;
+    width: 470px;
+    font-family: "Outfit", serif;
+    font-weight: normal;
+    line-height: 2;
+    letter-spacing: 1.4px;
+    text-align: justify;
+    font-size: 13px;
+}
+
+#development-paragraph {
+    font-family: "Outfit", serif;
+    font-weight: normal;
+    letter-spacing: 1.7px;
+    font-size: 16px;
+    height: 30px;
+    width: 980px;
+    margin: 20px auto 0;
+}
+
+#development-samples {
+    width: 980px;
+    height: 1500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 40px auto 0;
+}
+
+#website-snippet {
+    height: 553px;
+    width: 980px;
+}
+
+#code-snippet {
+    height: 771px;
+    width: 980px
+}
+
+#development-samples-2 {
+    height: 1100px;
+    width: 980px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin: 130px auto 0;
+}
+
+#code-snippet-2 {
+    height: 710px;
+    width: 450px
+}
+
+#code-snippet-3 {
+    height: 979px;
+    width: 450px;
+}
+
+#development-samples-3 {
+    height: 650px;
+    width: 980px;
+    margin: 40px auto 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+#website-snippet-2 {
+    height: 606px;
+    width: 300px;
+}
+
+#code-snippet-4 {
+    height: 406px;
+    width: 640px;
     box-shadow: 15px 15px #5e4011;
 }
 
@@ -190,6 +326,30 @@ nav a:hover {
     width: 500px;
     height: 533px;
     font-size: 16px;
+}
+
+#website-design-images {
+    height: 1300px;
+    width: 980px;
+    margin: 50px auto 0;
+    display: grid;
+    grid-template: repeat(2, 1fr) / 1fr;
+}
+
+.sample-image, #website-snippet {
+    height: 568px;
+    width: 980px;
+    box-shadow: 15px 15px #5e4011, -1px -1px 30px #f2d9b4;
+}
+
+#website-snippet-2 {
+    box-shadow: 15px 15px #5e4011, -1px -1px 30px #f2d9b4;
+}
+
+.space-between-titles h3 {
+    font-family: "Outfit", serif;
+    letter-spacing: 1.7px;
+    font-size: 18px;
 }
 
 hr {
@@ -205,14 +365,14 @@ footer {
     margin: 0 auto;
 }
 
-footer a {
-    text-decoration: none;
+footer a, #paragraph-section-grid-layout a {
+    text-decoration: underline;
     color: #1a46ad;
     transition: color 200ms ease-out;
     -webkit-transition: color 200ms ease-out;
 }
 
-footer a:hover {
+footer a:hover, #paragraph-section-grid-layout a:hover {
     color: #7a9ff5;
 }
 
@@ -271,9 +431,6 @@ footer a:hover {
         width: 100%;
 
     }
-    #navOverlay {
-
-    }
     #navOverlay a {
         color: white;
         text-decoration: none;
@@ -281,7 +438,7 @@ footer a:hover {
         font-weight: 250;
     }
     main {
-        margin-top: 55px;
+        margin-top: 85px;
     }
 }
 
@@ -289,7 +446,7 @@ footer a:hover {
     #openNav {
         margin-top: 0;
     }
-    #name, #projects-page-title {
+    #name, #projects-page-title, .project-detail-title {
         display: none;
     }
     header {
